skins/default/common.css
/* ... */
h3
{
  font-size: 18px;
}

a, a:active, a:visited
{
  color: #000;
  outline: none;
}

a.button, a.button:visited, a.tab, a.tab:visited, a.axislist
{
  color: #000;
  text-decoration: none;
}

a.tab
{
  width: 80px;
  display: block;
  text-align: center;
}

hr
{
  height: 1px;
  background-color: #666;
  border-style: none;
}

input[type="text"],
input[type="button"],
input[type="password"],
textarea
{
  border: 1px solid #666;
  color: #333;
  background-color: #FFF;
}

input, textarea
{
  color: black;
  padding: 1px 3px;
}

input.placeholder,
textarea.placeholder,
input:-moz-placeholder,
textarea:-moz-placeholder
{
  color: #aaa;
}

input.button
{
  height: 20px;
  color: #333333;
  font-size: 12px;
  padding-left: 8px;
  padding-right: 8px;
  background: url(images/buttons/bg.gif) repeat-x #f0f0f0;
  border: 1px solid #a4a4a4;
}

input.button:hover
{
  color: black;
}

input.button[disabled],
input.button[disabled]:hover
{
  color: #aaa;
  border-color: #ccc;
}

input.mainaction
{
  font-weight: bold;
  border: 1px solid #999;
}

img
{
  border: 0;
}

.alttext
{
  font-size: 11px;
}

.hint
{
  color: #666;
  font-size: 11px;
}

.formlinks a,
.formlinks a:visited
{
  color: #CC0000;
  font-size: 11px;
  text-decoration: none;
}

.formlinks a.disabled,
.formlinks a.disabled:visited
{
  color: #999999;
}

/** common user interface objects */

#mainscreen
{
  position: absolute;
  top: 85px;
  right: 20px;
  bottom: 20px;
  left: 20px;
}

body > #logo
{
  margin-left: 12px;
  cursor: pointer;
}

#taskbar
{
  position: absolute;
  top: 0px;
  right: 0px;
  height: 24px;
  left: 250px;
  background: url(images/taskbar.png) top right no-repeat;
  padding: 10px 6px 5px 0px;
  text-align: right;
  white-space: nowrap;
  z-index: 2;
}

#taskbar a
{
  font-size: 11px;
  color: #666666;
  text-decoration: none;
  padding: 6px 12px 6px 26px;
  background: url(images/taskicons.gif) no-repeat;
}

#taskbar a:hover
{
  color: #333333;
}

#taskbar a.button-mail
{
  background-position: 0 0;
}

#taskbar a.button-addressbook
{
  background-position: 0 -25px;
}

#taskbar a.button-settings
{
  background-position: 0 -50px;
}

#taskbar a.button-logout
{
  background-position: 0 -75px;
}

body > #message
{
  position: absolute;
  display: none;
  top: -1px;
  margin-left: -225px;
  left: 50%;
  z-index: 5000;
  opacity: 0.85;
}

body > #message div
{
  width: 400px;
  margin: 0px;
  min-height: 22px;
  padding: 8px 10px 8px 46px;
}

body > #message div.notice,
body > #messagebody .part-notice,
#message-objects div.notice
{
  background: url(images/display/icons.png) 6px 3px no-repeat;
  background-color: #F7FDCB;
  border: 1px solid #C2D071;
}

body > #message div.error,
body > #message div.warning,
#message-objects div.warning,
#message-objects div.error
{
  background: url(images/display/icons.png) 6px -97px no-repeat;
  background-color: #EF9398;
  border: 1px solid #DC5757;
}

body > #message div.confirmation,
#message-objects div.confirmation
{
  background: url(images/display/icons.png) 6px -47px no-repeat;
  background-color: #A6EF7B;
  border: 1px solid #76C83F;
}

body > #message div.loading,
#message-objects div.loading
{
  background: url(images/display/loading.gif) 6px 3px no-repeat;
  background-color: #EBEBEB;
  border: 1px solid #CCCCCC;
}

body > #message a
{
  cursor: pointer;
  text-decoration: underline;
}

.box
{
  border: 1px solid #999;
}

.boxtitle
{
  height: 12px !important;
  padding: 2px 10px 5px 5px;
  border-bottom: 1px solid #999;
  color: #333;
  font-size: 11px;
  font-weight: bold;
  overflow: hidden;
  text-overflow: ellipsis;
  -o-text-overflow: ellipsis;
  white-space: nowrap;
  background: url(images/listheader.gif) top left repeat-x #CCC;
}

.boxtitle .rightalign
{
  float: right;
}

body.iframe .boxtitle
{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}

.boxcontent
{
  padding: 15px 10px 10px 10px;
  background-color: #F2F2F2;
}

.boxcontent table td.title
{
  color: #666;
  padding-right: 10px;
}

.boxlistcontent
{
  position: absolute;
  top: 20px;
  bottom: 22px;
  left: 0;
  right: 0;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.boxsubject
{
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  overflow: hidden;
  height: 22px;
  border-bottom: 1px solid #999;
  background: url(images/listheader.gif) top left repeat-x #CCC;
}

.boxfooter
{
  position: absolute;
  bottom: 0px;
  left: 0px;
  right: 0px;
  overflow: hidden;
  height: 22px;
  border-top: 1px solid #999;
  background: url(images/listheader.gif) top left repeat-x #CCC;
}

.boxfooter a.button,
.boxfooter a.buttonPas
{
  display: block;
  float: left;
  width: 34px;
  height: 22px;
  padding: 0px;
  margin: 0;
  overflow: hidden;
  background: url(images/icons/groupactions.png) 0 0 no-repeat transparent;
  opacity: 0.99; /* this is needed to make buttons appear correctly in Chrome */
}

.boxfooter a.groupactions
{
  background-position: 0 -26px;
}

.boxfooter a.buttonPas
{
  opacity: 0.35;
}

.pagenav
{
  min-width: 250px;
}

.pagenav span
{
  color: #444;
  font-size: 11px;
  text-shadow: white 1px 1px;
  white-space: nowrap;
}

.pagenav a.button,
.pagenav a.buttonPas
{
  display: block;
  float: left;
  width: 11px;
  height: 11px;
  padding: 0;
  margin: 1px;
  margin-top: 2px;
  overflow: hidden;
  background: url(images/pagenav.gif) 0 0 no-repeat transparent;
  opacity: 0.99; /* this is needed to make buttons appear correctly in Chrome */
}

.pagenav a.buttonPas {
  opacity: 0.35;
}

.pagenav a.firstpageSel {
  background-position: 0 -11px;
}

.pagenav a.prevpage {
  background-position: -11px 0;
}

.pagenav a.prevpageSel {
  background-position: -11px -11px;
}

.pagenav a.nextpage {
  background-position: -22px 0;
}

.pagenav a.nextpageSel {
  background-position: -22px -11px;
}

.pagenav a.lastpage {
  background-position: -33px 0;
}

.pagenav a.lastpageSel {
  background-position: -33px -11px;
}
/* ... */

